Updated UI, added images and page with details for dishes

--- a/frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-  <div>
-    <i class="fa fa-cutlery fa-2x"></i>
-    <span class="brand-name">Dishes</span>
+  <div class="header__logo">
+    <img src="../../../assets/img/logo.png" alt="">
+    <span>DISHES</span>
   </div>
     <nav>
       <a routerLink="/all-dishes">All dishes</a>
