--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,2 @@
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 140px;">
-    <router-outlet></router-outlet>
-</div>
+<app-main></app-main>
