--- a/frontend/src/app/components/dishes-list/dishes-list.component.html
+++ b/frontend/src/app/components/dishes-list/dishes-list.component.html
@@ -1,37 +1,14 @@
-<form [formGroup]="myForm">
-    <label for="category">Select category:</label>
-    <select id="category" *ngIf="categories$ | async as categories" formControlName="category">
-        <option value=""></option>
-        <option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</option>
-    </select>
-    <br>
-    <label for="subcategory">Select subcategory:</label>
-    <select id="subcategory" *ngIf="subcategories$ | async as subcategories" formControlName="subcategory">
-        <option value=""></option>
-        <option *ngFor="let subcategory of subcategories" value="{{subcategory.name}}">{{subcategory.name}}</option>
-    </select>
-    <br>
-    <label for="ingredient">Select ingredient:</label>
-    <select id="ingredient" *ngIf="ingredients$ | async as ingredients" formControlName="ingredient">
-        <option value=""></option>
-        <option *ngFor="let ingredient of ingredients" value="{{ingredient.name}}">{{ingredient.name}}</option>
-    </select>
-    <br>
-    <button (click)="addFilter()">Apply</button>
-    <button type="reset" (click)="resetFilterByCategory()">Reset</button>
-</form>
-
 <div class="dishes__list" *ngIf="dishes$ | async as dishes">
     <div class="dish__item" *ngFor="let dish of dishes">
-        <div class="dish__value"><b>Name: </b>{{dish.name}}</div>
-        <div class="dish__value"><b>Rating: </b>{{dish.rating}}</div>
-        <div class="dish__value"><b>Category: </b>{{dish.dishCategory}}</div>
-        <div class="dish__value"><b>Subcategory: </b>{{dish.dishSubcategory}}</div>
-        <div class="dish__value"><b>Ingredients: </b>
-            <span class="dish__ingredient" *ngFor="let ingredient of dish.ingredients; let isLast = last">{{ingredient.name}}<span *ngIf="!isLast">, </span>
-            </span>
-        </div>
-        <div class="dish__value"><b>Description: </b>{{dish.description}}</div>
-        <div class="dish__value"><b>Recipe: </b>{{dish.recipe}}</div>
+        <img class="dish__img" src="{{dish.pictureUrl}}" alt="">
+        <div class="dish__name">{{dish.name}}</div>
+        <div class="dish__description">{{dish.description}}</div>
+        <a class="dish__details" [routerLink]="['/dish-details', dish.id]">Details...</a>
     </div>
 </div>
+            <!--
+                <span class="dish__ingredient" *ngFor="let ingredient of dish.ingredients; let isLast = last">
+                    {{ingredient.name}}
+                    <span *ngIf="!isLast">, </span>
+                </span>
+            -->
