--- a/frontend/src/app/components/dishes-list/dishes-list.component.scss
+++ b/frontend/src/app/components/dishes-list/dishes-list.component.scss
@@ -1,15 +1,50 @@
+:host{
+    margin: 0 auto;
+}
+
 .dishes__list{
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
 
 .dish__item{
-    width: 330px;
-    height: 280px;
+    width: 100%;
+    max-width: 300px;
+    height: 400px;
     padding: 10px;
     background-color: rgb(206, 227, 250);
-    border-radius: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+}
+
+.dish__img{
+    width: 250px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.dish__name{
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.dish__description{
+    font-weight: 300;
+}
+
+.dish__details{
+    border: 0.1px solid #000;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+    padding: 10px 30px;
+    background-color: #fff;
+    color: #000;
 }
